[package]
name = "swf-tree"
version = "0.9.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Abstract Syntax Tree (AST) for SWF files"
documentation = "https://github.com/open-flash/swf-tree"
homepage = "https://github.com/open-flash/swf-tree"
repository = "https://github.com/open-flash/swf-tree"
readme = "./README.md"
keywords = ["ast", "swf"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "open-flash/swf-tree", branch = "master" }

[lib]
name = "swf_tree"
path = "src/lib.rs"

[dependencies]
hex = { version = "^0.3.2", optional = true}
serde = { version = "^1.0.89", optional = true, features = ["derive"] }
swf-fixed = "^0.1.4"

[features]
# Serialization is enabled by default.
# Use `swf-tree = { version = "...", default-features = false }` to disable it.
default = ["use-serde"]

# Adds implementation for `serde`'s `Serialiaze` and `Deserialize` traits.
use-serde = ["serde", "hex"]

[dev-dependencies]
serde_json_v8 = "^0.0.1"
test-generator = "^0.2.2"

[workspace]
members = ["bin"]
