[package]
name = "swf-types"
version = "0.10.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Type definitions for the SWF file format"
documentation = "https://github.com/open-flash/swf-types"
homepage = "https://github.com/open-flash/swf-types"
repository = "https://github.com/open-flash/swf-types"
readme = "./README.md"
keywords = ["ast", "swf"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "open-flash/swf-types", branch = "master" }

[lib]
name = "swf_types"
path = "src/lib.rs"

[dependencies]
hex = { version = "^0.4.0", optional = true}
serde = { version = "^1.0.102", optional = true, features = ["derive"] }
swf-fixed = "^0.1.4"

[features]
# Serialization is enabled by default.
# Use `swf-types = { version = "...", default-features = false }` to disable it.
default = ["use-serde"]

# Adds implementation for `serde`'s `Serialiaze` and `Deserialize` traits.
use-serde = ["serde", "hex"]

[dev-dependencies]
serde_json_v8 = "^0.0.1"
test-generator = "^0.3.0"

[workspace]
members = ["bin"]
