[package]
name = "swf-tree"
version = "0.0.14"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Abstract Syntax Tree (AST) for SWF files"
documentation = "https://github.com/open-flash/swf-tree"
homepage = "https://github.com/open-flash/swf-tree"
repository = "https://github.com/open-flash/swf-tree"
readme = "./README.md"
keywords = ["ast", "swf"]
license = "MIT"
edition = "2018"

[lib]
name = "swf_tree"
path = "src/lib.rs"

[[bin]]
name = "swf-tree"
path = "src/main.rs"

[dependencies]
avm1-tree = "^0.0.15"
hex = "^0.3.2"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.32"
swf-fixed = "^0.1.0"
