[package]
name = "swf-tree"
version = "0.0.14"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Abstract Syntax Tree (AST) for SWF files"
documentation = "https://github.com/open-flash/swf-tree"
homepage = "https://github.com/open-flash/swf-tree"
repository = "https://github.com/open-flash/swf-tree"
readme = "./README.md"
keywords = ["ast", "swf"]
license = "MIT"

[lib]
name = "swf_tree"
path = "src/lib.rs"

[[bin]]
name = "swf-tree"
path = "src/main.rs"

[dependencies]
hex = "^0.3.2"
nom = "4.0.0-beta3"
#num-traits = "^0.1.41"
serde = "^1.0.43"
serde_derive = "^1.0.43"
serde_json = "^1.0.16"
